--- a/hpbd.html
+++ b/hpbd.html
@@ -7,11 +7,124 @@
   <title>Document</title>
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+  <!--My style-->
+  <link rel="stylesheet" href="./style.css">
+
 </head>
-<body>
-  <div class="text-center m-5">
-    <h1 class="text-danger m-5">HAPPY BIRTHDAY</h1>
+<body class="my-gradient">
+  <div class="text-center m-5 shake-it">
+    <h1 class="display-3 m-5 appear-it strokeme">HAPPY BIRTHDAY</h1>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-3">
+        <img src="wow-sharlene.gif" alt="" class="img-fluid">
+      </div>
+      <div class="col-6">
+        <img src="love.jpg" alt="" style="width: 80%; margin: auto;">
+      </div>
+      <div class="col-3">
+        <img src="thulinhthebai.gif" alt="" class="d-block rounded mt-5 rotated" style="width: 100%">
+        <img src="heart.jpg" alt="" class="img-fluid d-block rounded mt-5">
+      </div>
+    </div>
+    
+    <div class="container" style="margin-top: 300px;">
+      <div class="row">
+        <div class="col-3">
+          <img src="couple_1.jpg" alt="" class="img-fluid rotated-1">
+        </div>
+        <div class="col-6 text-center">
+          <h3>O cua ban Ngoc o day ne</h3>
+          <button class="btn" data-toggle="modal" data-target="#present_1">
+            <img src="gift_box.svg" alt="" style="width: 350px;" class="rotated-2">
+          </button>
+        </div>
+        <div class="col-3">
+          <img src="couple_2.jpg" alt="" class="img-fluid mt-5 rotated">
+        </div>
+      </div>
+    </div>
+    
+    <div class="container" style="margin-top: 300px;">
+      <div class="row">
+        <div class="col-3">
+          <img src="couple_3.jpg" alt="" class="img-fluid rotated">
+        </div>
+        <div class="col-6 text-center">
+          <h3>Con mot cai nua ne</h3>
+          <button class="btn" data-toggle="modal" data-target="#present_2">
+            <img src="heart_card.svg" alt="" style="width: 350px;" class="rotated-1">
+          </button>
+        </div>
+        <div class="col-3">
+          <img src="couple_4.jpg" alt="" class="img-fluid mt-5 rotated-2">
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <div class="container text-center" style="margin-top: 300px;">
+      <h2>Đây là 1 video nho nhỏ tặng anh </h2>
+      <iframe src="https://youtube.com/embed/_ojZLV7ukEM" frameborder="0" width="854" height="480"></iframe>
+    </div>
+    <div class="text-center mt-5">
+      <img src="i_love_u_animation.gif" alt="">
+    </div>
+
+  </div>
+  
+
+  <!-- Modal -->
+  <div class="modal fade" id="present_1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Qua cho anh eo</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body h4 birthday-card-1">
+          <br>
+          <br>
+          Chúc mừng sinh nhật anh yêu.
+Năm nay phải đón sinh nhật online với anh nên không được trọn vẹn lắm nhưng em vẫn mong anh thích món quà này. Em chúc anh tuổi mới sẽ càng đẹp trai hơn nè, anh thì chăm chỉ rồi nên em mong anh sẽ nhận được thành quả xứng đáng, sau này kiếm được công việc thích hợp và nhiều tiền để nuôi bé. Mong anh luôn được hạnh phúc, vui vẻ và mong người luôn cùng chia sẻ những điều đó với anh là em.
+Chúc người con trai em yêu nhất sinh nhật vui vẻ 
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="present_2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Qua cho anh eo</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body h4 birthday-card-2">
+          <br>
+          <br>
+          Ở trên chỉ là phần quà tinh thần, là lời chúc của em thôi.
+Đây là quà vật chất, có giá trị nha. Mà phải sau khi gặp lại em mới đưa anh được. Cho tới lúc đó cho em nợ nha hihi.
+Lần nữa em muốn chúc anh sinh nhật thật vui vẻ.
+Đây là lần thứ 5 được cùng anh đón sinh nhật rồi nhưng không có dừng lại ở con số 5 này đâu nha. Em sẽ cùng anh đón thêm mấy chục cái sinh nhật nữa lận. Love youu
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
   <!--JS for bootstrap-->
