--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WELCOME BIRTHDAY BOY</title>
 
     <!--Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -29,7 +29,7 @@ background: linear-gradient(90deg, rgba(255,186,218,1) 35%, rgba(0,212,255,1) 10
         @keyframes shake {
         0% { transform: translate(1px, 1px) rotate(0deg); }
         50% { transform: translate(-1px, 2px) rotate(-1deg); }
-        100% { transform: translate(1px, -2px) rotate(-1deg); }
+        100% { transform: translate(1px, -2px) rotate(1deg); }
         }
     </style>
 
@@ -41,7 +41,7 @@ background: linear-gradient(90deg, rgba(255,186,218,1) 35%, rgba(0,212,255,1) 10
             <h1 id="title" class="text-danger">Welcome <br>TRẦN HUỲNH BẢO NGỌC</h1>
         </div>
 
-        <h4 class="m-5 text-center">Vui long dang nhap vao trang web nay de tiep tuc</h4>
+        <h4 class="m-5 text-center">Vui lòng đăng nhập để tiếp tục</h4>
 
         <form class="text-center m-5" onsubmit="event.preventDefault()">
             <div class="form-group row justify-content-center">
@@ -58,13 +58,13 @@ background: linear-gradient(90deg, rgba(255,186,218,1) 35%, rgba(0,212,255,1) 10
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">THANH CONG NHUNG KHONG THANH THU</h5>
+              <h5 class="modal-title" id="exampleModalLabel">THÀNH CÔNG NHƯNG KHÔNG THÀNH THỤ</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              BAM NEXT DI TINH EO CUA EM
+              HỠI TÌNH YÊU CỦA EM, BẤM NEXT GIÙM EM
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
