--- a/hpbd.html
+++ b/hpbd.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Quao, Tanjoubi Omedetou</title>
   <!--Bootstrap-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
@@ -23,11 +23,11 @@
         <img src="wow-sharlene.gif" alt="" class="img-fluid">
       </div>
       <div class="col-6">
-        <img src="love.jpg" alt="" style="width: 80%; margin: auto;">
+        <img src="love.jpg" alt="" style="width: 90%; margin: auto;">
       </div>
       <div class="col-3">
-        <img src="thulinhthebai.gif" alt="" class="d-block rounded mt-5 rotated" style="width: 100%">
-        <img src="heart.jpg" alt="" class="img-fluid d-block rounded mt-5">
+        <img src="thulinhthebai.gif" alt="" class="img-fluid rounded mt-5 rotated" style="width: 100%">
+        <img src="heart.jpg" alt="" class="img-fluid rounded mt-5" style="width: 80%;">
       </div>
     </div>
     
@@ -37,9 +37,9 @@
           <img src="couple_1.jpg" alt="" class="img-fluid rotated-1">
         </div>
         <div class="col-6 text-center">
-          <h3>O cua ban Ngoc o day ne</h3>
+          <h3>Quà của anh ở đây nè</h3>
           <button class="btn" data-toggle="modal" data-target="#present_1">
-            <img src="gift_box.svg" alt="" style="width: 350px;" class="rotated-2">
+            <img src="gift_box.svg" alt="" style="width: 110%;" class="rotated-2">
           </button>
         </div>
         <div class="col-3">
@@ -51,16 +51,16 @@
     <div class="container" style="margin-top: 300px;">
       <div class="row">
         <div class="col-3">
-          <img src="couple_3.jpg" alt="" class="img-fluid rotated">
+          <img src="couple_3.jpg" alt="" class="img-fluid rotated width-90">
         </div>
         <div class="col-6 text-center">
-          <h3>Con mot cai nua ne</h3>
+          <h3>Còn một cái nữa nè</h3>
           <button class="btn" data-toggle="modal" data-target="#present_2">
-            <img src="heart_card.svg" alt="" style="width: 350px;" class="rotated-1">
+            <img src="heart_card.svg" alt="" style="width: 110%;" class="rotated-1">
           </button>
         </div>
         <div class="col-3">
-          <img src="couple_4.jpg" alt="" class="img-fluid mt-5 rotated-2">
+          <img src="couple_4.jpg" alt="" class="img-fluid mt-5 rotated-2 width-90">
         </div>
       </div>
       </div>
@@ -68,10 +68,10 @@
 
     <div class="container text-center" style="margin-top: 300px;">
       <h2>Đây là 1 video nho nhỏ tặng anh </h2>
-      <iframe src="https://youtube.com/embed/_ojZLV7ukEM" frameborder="0" width="854" height="480"></iframe>
+      <iframe src="https://youtube.com/embed/_ojZLV7ukEM" frameborder="0" style="width: 48vw; height: 27vw; margin: auto;"></iframe>
     </div>
     <div class="text-center mt-5">
-      <img src="i_love_u_animation.gif" alt="">
+      <img src="i_love_u_animation.gif" alt="" class="width-70">
     </div>
 
   </div>
@@ -82,7 +82,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Qua cho anh eo</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Không đòi lại quà, hứa luôn!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -105,7 +105,7 @@ Chúc người con trai em yêu nhất sinh nhật vui vẻ
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Qua cho anh eo</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Có đòi thì cũng hong được trả</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
