--- a/index.html
+++ b/index.html
@@ -35,13 +35,18 @@ background: linear-gradient(90deg, rgba(255,186,218,1) 35%, rgba(0,212,255,1) 10
 
 </head>
 <body id="body" class="my-gradient">
+    <!--Made by TUNG-->
 
     <div class="container-fluid">
         <div class="text-center m-5 shake-it">
             <h1 id="title" class="text-danger">Welcome <br>TRẦN HUỲNH BẢO NGỌC</h1>
         </div>
 
-        <h4 class="m-5 text-center">Vui lòng đăng nhập để tiếp tục</h4>
+        <div class="text-center">
+            <h4 class="m-5">Vui lòng đăng nhập để tiếp tục</h4>
+            <small>Dùng PC để có trải nghiệm tốt nhất</small>
+        </div>
+        
 
         <form class="text-center m-5" onsubmit="event.preventDefault()">
             <div class="form-group row justify-content-center">
