--- a/hpbd.html
+++ b/hpbd.html
@@ -33,34 +33,40 @@
     
     <div class="container" style="margin-top: 300px;">
       <div class="row">
-        <div class="col-3">
-          <img src="couple_1.jpg" alt="" class="img-fluid rotated-1">
+        <div class="col-3 text-right">
+          <img src="couple_1.jpg" alt="" class="img-fluid rotated-1 width-50">
+          <img src="couple_8.jpg" alt="" class="img-fluid mt-5 rotated-2 width-60">
         </div>
         <div class="col-6 text-center">
           <h3>Quà của anh ở đây nè</h3>
-          <button class="btn" data-toggle="modal" data-target="#present_1">
+          <h4  class="text-primary">Bấm vô để nhận quà nhe</h4>
+          <button class="btn shake-it" data-toggle="modal" data-target="#present_1">
             <img src="gift_box.svg" alt="" style="width: 110%;" class="rotated-2">
           </button>
         </div>
         <div class="col-3">
-          <img src="couple_2.jpg" alt="" class="img-fluid mt-5 rotated">
+          <img src="couple_2.jpg" alt="" class="img-fluid mt-5 rotated width-60">
+          <img src="couple_7.jpg" alt="" class="img-fluid mt-5 rotated-1 width-70">
         </div>
       </div>
     </div>
     
     <div class="container" style="margin-top: 300px;">
       <div class="row">
-        <div class="col-3">
-          <img src="couple_3.jpg" alt="" class="img-fluid rotated width-80">
+        <div class="col-3 text-right">
+          <img src="couple_3.jpg" alt="" class="img-fluid rotated width-50">
+          <img src="couple_5.jpg" alt="" class="img-fluid rotated-2 m-5 width-70">
         </div>
         <div class="col-6 text-center">
           <h3>Còn một cái nữa nè</h3>
-          <button class="btn" data-toggle="modal" data-target="#present_2">
+          <h4 class="text-primary">Bấm vô để nhận quà nhe</h4>
+          <button class="btn shake-it" data-toggle="modal" data-target="#present_2">
             <img src="heart_card.svg" alt="" style="width: 110%;" class="rotated-1">
           </button>
         </div>
         <div class="col-3">
-          <img src="couple_4.jpg" alt="" class="img-fluid mt-5 rotated-2 width-80">
+          <img src="couple_4.jpg" alt="" class="img-fluid mt-5 rotated-2 width-50">
+          <img src="couple_6.jpg" alt="" class="img-fluid mt-5 rotated width-60">
         </div>
       </div>
       </div>
@@ -71,7 +77,7 @@
       <iframe src="https://youtube.com/embed/_ojZLV7ukEM" frameborder="0" style="width: 48vw; height: 27vw; margin: auto;"></iframe>
     </div>
     <div class="text-center mt-5">
-      <img src="i_love_u_animation.gif" alt="" class="width-70">
+      <img src="i_love_u_animation.gif" alt="" class="width-50">
     </div>
 
   </div>
