--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@ background: linear-gradient(90deg, rgba(255,186,218,1) 35%, rgba(0,212,255,1) 10
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">THÀNH CÔNG NHƯNG KHÔNG THÀNH THỤ</h5>
+              <h5 class="modal-title" id="exampleModalLabel">ĐĂNG NHẬP VÀO TRÁI TIM EM THÀNH CÔNG</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
-              HỠI TÌNH YÊU CỦA EM, BẤM NEXT GIÙM EM
+              MUỐN COI TIẾP THÌ BẤM TIẾP ĐÊ
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
